scrollbar css, loading fix, clean admin

--- a/src/app/admin/admin.css
+++ b/src/app/admin/admin.css
@@ -38,6 +38,8 @@
   border-radius: 1rem;
   box-shadow: 0 0.125rem 0.5rem rgba(0, 0, 0, 0.3),
     0 0.0625rem 0.125rem rgba(0, 0, 0, 0.2);
+  max-height: 135px;
+  overflow: auto;
 }
 .message .text-message::before {
   content: "";
