--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -52,6 +52,29 @@ body {
   scroll-behavior: smooth;
   background-color: var(--couleur-beige-clair);
 }
+/* SCROLL BAR  :  */
+/* Pour les navigateurs basés sur WebKit (Chrome, Safari, etc.) */
+::-webkit-scrollbar {
+  width: 5px; /* Largeur de la barre de défilement */
+}
+::-webkit-scrollbar-thumb {
+  background-color: #888; /* Couleur de la poignée (le "thumb") */
+}
+::-webkit-scrollbar-track {
+  background-color: #f2f2f2; /* Couleur de la piste (le "track") */
+}
+/* Pour Internet Explorer */
+::-ms-scrollbar {
+  width: 5px;
+}
+::-ms-scrollbar-thumb {
+  background-color: #888;
+  border-radius: 6px;
+}
+::-ms-scrollbar-track {
+  background-color: #f2f2f2;
+}
+/* END SCROLL BAR */
 h1 {
   font-family: "Playfair Display";
 }
